# JOB-HUNTER

./: .env  docker-compose.yml  pyproject.toml
app/api/: main.py
app/api/routes/: jobs.py
app/collectors/: ashby.py  base.py  collectorsManager.py  greenhouse.py  lever.py
app/core/: config.py  loader.py  settings.py
app/db/: models.py  session.py
app/matcher/: aliases.py  models.py  normalizer.py  scoring.py
app/matcher/bonuses/: __init__.py  base.py  infrastructure.py
app/matcher/preferences/: __init__.py  base.py  companies.py
app/matcher/rules/: __init__.py  base.py  locations.py  penalties.py  registry.py  seniority.py  skills.py  titles.py
app/matcher/rules/titles/: _init_.py  ai.py  backend.py  data.py  frontend.py  infrastructure.py  management.py  mobile.py  security.py
app/schemas/: board.py  job.py  job_filter.py  job_response.py
app/services/: html_cleaner.py  job_repository.py  job_service.py
data/: ashby_boards.json  greenhouse_boards.json
scripts/: analyze_scores.py  create_db.py  debug_ashby.py  run_greenhouse.py  test_bonus.py  test_normalizer.py  test_playwright.py  test_preference.py
