[project]
name = "job-hunter"
version = "0.1.0"
description = "AI-powered job aggregation platform"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "sqlalchemy>=2.0.40",
    "psycopg[binary]>=3.2.9",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.13.4",
    "lxml>=6.0.0",
    "playwright>=1.54.0",
    "python-dotenv>=1.1.1",
    "pydantic-settings>=2.10.1",
    "alembic>=1.16.4",
    "openai>=1.97.0",
]